Closed Bug 600402 Opened 15 years ago Closed 15 years ago

don't copy strings that are in the same compartment already

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta7+

People

(Reporter: gal, Assigned: gal)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(2 files)

No description provided.
No longer depends on: 600173
Assignee: general → gal
Attached patch patch — — Splinter Review
Attachment #479228 - Flags: review?(mrbkap)
Tryserver is green.
Land it.
Attachment #479228 - Flags: review?(mrbkap) → review+
Should JSCompartment::wrap also skip the copy for atomized strings that live in the default compartment?
#4: that should be safe
mhm, I wonder if our compartment assertions cover that probably. we will find out
Attached patch patch — — Splinter Review
Also don't copy atoms. Gregor, can you try this?
blocking2.0: ? → beta7+
Version: 1.9.2 Branch → Trunk
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: