Bug 600402 - don't copy strings that are in the same compartment already r=mrbkap